[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "base58>=2.1.1",
    "blockchain>=1.4.4",
    "mnemonic>=0.21",
    "motor>=3.7.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "solana>=0.36.9",
    "solders>=0.26.0",
]
