[package]
name = "casino-treasury"
version = "0.1.0"
description = "Casino Treasury Management Program for Solana"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"

[dev-dependencies]
solana-program-test = "1.17.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }